# Compiler

./: .gitignore  CMakeLists.txt  README.txt  codeGenerator.c  codeGenerator.h  fileReader.c  generatorIO.c  generatorIO.h  generatorMain.c  node.h  parser.c  parser.h  parserIO.c  parserIO.h  productions.c  productions.h  scanner.c  scanner.h  scannerIO.c  scannerIO.h  semantics.c  semantics.h  semanticsIO.c  semanticsIO.h  token.h  tree.c  tree.h
